# cling

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CREDITS.txt  LICENSE.TXT  LastKnownGoodLLVMSVNRevision.txt  Makefile  Module.mk  README  README.md  VERSION  appveyor.yml
cmake/modules/: CMakeLists.txt  ClingConfig.cmake  ClingConfig.cmake.in
docs/: CMakeLists.txt  Makefile  ReleaseNotes.md  conf.py  doxygen.cfg.in  doxygen.css  doxygen.footer  doxygen.header  doxygen.intro  index.rst  manpage.css
docs/ReadTheDocs/: conf.py  index.rst
docs/chapters/: REPL.rst  XEUS.rst  applications.rst  background.rst  conclusion.rst  grammar.rst  implementation.rst  interactivity.rst  references.rst  why_interpreting.rst
docs/tools/: Makefile  cling.pod  cling.pod.in  in2pod.py  manpage.css  podgen.py
lib/: CMakeLists.txt  Makefile
lib/Interpreter/: #DynamicLibraryManager.cpp#  #ValueExtractionSynthesizer.cpp#  ASTDumper.cpp  ASTDumper.h  ASTImportSource.cpp  ASTImportSource.h  ASTNodeEraser.cpp  ASTNodeEraser.h  ASTNullDerefProtection.cpp  ASTNullDerefProtection.h  ASTTransformer.cpp  ASTTransformer.h  AutoSynthesizer.cpp  AutoSynthesizer.h  AutoloadCallback.cpp  AutoloadingStateInfo.h  AutoloadingTransform.cpp  AutoloadingTransform.h  AutoloadingVisitor.cpp  AutoloadingVisitor.h  BackendPass.cpp  BackendPass.h  BackendPasses.cpp  BackendPasses.h  CIFactory.cpp  CMakeLists.txt  Callable.cpp  CheckEmptyTransactionTransformer.cpp  CheckEmptyTransactionTransformer.h  ClangInternalState.cpp  ClangInternalState.h  ClingCodeCompleteConsumer.cpp  ClingPragmas.cpp  ClingPragmas.h  ClingTabCompletion.cpp  ClingUtils.h  DeclCollector.cpp  DeclCollector.h  DeclExtractor.cpp  DeclExtractor.h  (+65 more)
lib/MetaProcessor/: CMakeLists.txt  Display.cpp  Display.h  InputValidator.cpp  InputValidator.h  Makefile  MetaLexer.cpp  MetaLexer.h  MetaParser.cpp  MetaParser.h  MetaProcessor.cpp  MetaSema.cpp  MetaSema.h  PunctuationLexer.cpp  PunctuationLexer.h
lib/TagsExtension/: AutoloadCallback.cpp  CMakeLists.txt  Callback.cpp  CtagsWrapper.cpp  FSUtils.cpp  FSUtils.h  Makefile  TagManager.cpp  readtags.cpp  readtags.h
lib/UserInterface/: CMakeLists.txt  ClingCodeCompleteConsumer.h  ClingTabCompletion.h  Makefile  RequiredSymbols.cpp  UserInterface.cpp
lib/Utils/: AST.cpp  ASTImportSource.cpp  CMakeLists.txt  Diagnostics.cpp  EmuTLS.cpp  Makefile  Output.cpp  ParserStateRAII.cpp  Paths.cpp  PlatformMac.cpp  PlatformPosix.cpp  PlatformWin.cpp  Signal.cpp  SourceNormalization.cpp  UTF8.cpp  Validation.cpp
test/: CMakeLists.txt  Makefile  lit.cfg  lit.site.cfg.in
test/AutoComplete/: AutoComplete.C
test/Autoloading/: AutoForwarding.C  Def.h  Def2.h  Def2a.h  Def2b.h  Def2c.h  Def2sub.h  Enum.h  EnumTest.C  Fail.C  Fail.h  FakeFwd.h  ForwardDeclareAllInIncludePaths.C  Forwarding.C  FunctionTemplate.h  Incomplete.C  Spc.h  Stlfwd.C  Stlinc.h  test.h
test/CUDADeviceCode/: CUDAConstantMemory.C  CUDADefineArg.C  CUDAGlobalDeviceMemory.C  CUDAHostPrefix.C  CUDAInclude.C  CUDAKernelArgument.C  CUDAKernelTemplate.C  CUDAKernelTemplateComplex.C  CUDAKernelTemplateSimple.C  CUDARegression.C  CUDASharedMemory.C  CUDASimpleKernel.C  CUDAStreams.C
test/CodeGeneration/: CUDACtorDtor.C  Inline.C  Inline.h  Lambda.C  RecursiveInit.C  Statics.C  Symbols.C  TLSVars.C  VTableDestructor.C  VTables.C  ValidDuplicateInstantiation.cpp  const.C
test/CodeUnloading/: Assignments.C  AtExit.C  BadAlloc.C  CGlobalDecl.C  CGlobalDecl.h  CircularReferences.C  Classes.C  DeclShadowing.C  Dtors.C  Exception.C  ExternC.C  ForwardReturn.C  Friend.C  Friend.h  FriendNested.h  FriendRecursive.h  InitializerList.C  InitializerList.h  Macros.C  Macros.h  Math.C  NameSpaces.C  NameSpaces.h  NestedNameSpaces.C  New.C  OpNew.h  ProtectedClass.h  ProtectedClassHeader.C  Reloader.C  Reloader.h  RereadFile.C  RunAgainstClangTestSuite.C  STL.C  STLNoRuntime.C  Simple.C  SizeT.C  SysError.C  TemplDefaultArgs.C  TemplFriend.C  TemplFriend.h  (+12 more)
test/Driver/: C.c  CUDAMode.C  CommandHistory.C  CurrentDir.C  CurrentDirRm.C  E.C  EOF.C  Gnu.C  Init.C  Inputs.C  NoRuntime.C  NoStdInc.C  Shebang.C  StartupFile.C  XexternC.C  args.C
test/DynamicLibraryManager/: cached_realpath.C  call.C  call_lib.c  call_lib_A.c  call_lib_AA.c  call_lib_B.c  call_lib_BB.c  call_lib_L.c  call_lib_L3.c  call_lib_L_AB.c  call_pie.c  callable_lib.C  callable_lib_A.C  callable_lib_AA.C  callable_lib_B.C  callable_lib_BB.C  callable_lib_L.C  callable_lib_L3_rpath.C  callable_lib_L3_runpath.C  callable_lib_L_AB_abs.C  callable_lib_L_AB_ldlibpath.C  callable_lib_L_AB_loc.C  callable_lib_L_AB_order.C  callable_lib_L_AB_order1.C  callable_lib_L_AB_path.C  callable_lib_L_AB_path1.C  callable_lib_L_AB_path2.C  callable_lib_L_AB_rpath.C  callable_lib_L_AB_rpath2.C  callable_lib_L_AB_runpath.C  callable_lib_L_AB_runpath2.C  callable_lib_L_AB_subst.C  callable_lib_L_AB_subst1.C  callable_lib_L_AB_subst2.C  callable_lib_L_AB_subst3.C  callable_lib_L_AB_subst4.C  library_path.C  load.C  load_L_AB.C  pie.C
test/ErrorRecovery/: ABI.C  AnonymousDecls.C  CannotDotX.h  CurrentFailures.C  CurrentFailures.h  Diagnostics.C  Exceptions.C  HeaderFileProtector.C  HeaderFileProtector.h  IncompleteType.C  Instantiation.C  Instantiation.h  InstantiationFail.C  InstantiationStatic.C  Lamda.C  MacroDef.C  MacroDef.h  MacroExpansion.C  MetaProcessor.C  MisorderedIncludes.C  NestedTags.C  Overloads.h  Redeclarables.C  Redeclarables.h  StoredState.C  SubsequentDecls.C  SubsequentDecls.h  SysErrorSimple.C  SysErrorSimple.h  UnCacheFile.C  Vector.C
test/Interfaces/: #evaluate.C#  Macro.C  address.C  address_lib.c  callable.C  compileFunc.C  dg.exp  echo.C  evaluate.C  execute.C  invocationFlags.C  paths.C  print.C  transactionReuse.C
test/LibraryCall/: call.C  call_lib.c  callable_lib.C  libcall_lib.dylib  library_path.C
test/Lookup/: args.C  data.C  failedTemplateInstantiations.C  func.C  linkageSpec.C  named.C  scope.C  tag.C  template.C  type.C  variadicFunc.C
test/MultipleInterpreters/: MultipleInterpreters.C
test/NullDeref/: BinOp.C  Cast.C  (+10 more)
tools/: CMakeLists.txt  Makefile
(+397 files in other folders)
